--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,11 +1,12 @@
-[phases.build]
+[build]
 cmd = "npm run build"
 
-[phases.install]
+[install]
 cmd = "npm install"
 
-[phases.start]
-cmd = "npm run preview -- --host"
+[start]
+cmd = "npm run start"
 
 [variables]
 NODE_ENV = "production"
+PORT = "5555"
